# MCSTask

00/: Makefile  README.md  ex1.h  ex2.h  ex3.h  my_bit.h  test.cpp  test1.cpp  test2.cpp  test3.cpp
01/: CMakeLists.txt  json2dot  json2dot.cpp  json2json.cpp  machine_settings.h  mealy.h  mealy.json  mealy_settings.h  remove.sh  t.json  x.cpp
01/data/: mealy.dot  mealy.json
02/: CMakeLists.txt  generate  generate.cpp
02/example/: conect_layers.dot  hight_k.dot  layers.dot  result.dot
ProductSummForm/: Makefile  README.md  main.c  monom.h  monom_io.h  monom_operation.h  monom_type.h
ProductSummForm/tests/: binom_test.c  scroll.sh
ProductSummForm/tests/tests_expect/: 10.txt  12.txt  13.txt  14.txt  15.txt
ProductSummForm/tests/tests_in/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt
